--- a/Neural Net Theano.ipynb
+++ b/Neural Net Theano.ipynb
@@ -605,6 +605,17 @@
    "source": [
     "build_model(num_passes=2000, print_loss=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "build_model(num_passes=1000, print_loss=True)"
+   ]
   }
  ],
  "metadata": {
